# hpc-otel-exporter

./: .clang-format  .clang-tidy  .clangd  Cargo.toml  README.md  TODO.md  build.rs  docker-compose.yml
.cargo/: config.toml
docker/alloy/: config.alloy
docker/grafana/provisioning/datasources/: mimir.yaml
docker/mimir/: mimir.yaml
scripts/: cargo-run-with-otel.sh
src/: bindings.rs  main.rs  telemetry.rs
src/bpf/: bitops.h  common_bpf.h  common_shared.h  example.bpf.c  folio.h
