[package]
name = "hpc-otel-collector"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.101"
dashmap = { version = "6.1.0", features = ["inline"] }
env_logger = "0.11"
libbpf-rs = "0.26.0"
libbpf-sys = "1.6.3"
libc = "0.2"
log = "0.4"
opentelemetry = { version = "0.31.0", features = ["metrics"] }
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = [
    "metrics",
    "grpc-tonic",
    "zstd-tonic",
] }
opentelemetry_sdk = { version = "0.31.0", features = [
    "metrics",
    "spec_unstable_metrics_views",
] }
rustc-hash = "2"
tokio = { version = "1.48", features = ["full"] }

[patch.crates-io]
opentelemetry = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", branch = "main" }
opentelemetry-otlp = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", branch = "main" }
opentelemetry_sdk = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", branch = "main" }

[build-dependencies]
libbpf-cargo = "0.26.0"
serde_json = "1.0.149"
bindgen = "0.72.1"

[profile.release]
lto = "thin"
opt-level = 3
strip = "debuginfo"
